# ft_printf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  pbcopy
.cache/clangd/index/: ft_printf.c.D1E0514A60927F63.idx  ft_printf.h.57813C11033BDD4F.idx
aux/: notes.md
example/: main.c
hand_test/: Makefile  exec  main.c
include/: ft_printf.h  parse.h  t_lexeme.h  t_lexeme_list.h  t_print_token.h  t_substr_list.h
lib/libft/src/extension/io/: ft_putchar.c
src/: ft_printf.c  parse.c  print.c  print.h  print_numbers.c  print_pointer.c  print_text.c  tokenize.c  tokenize.h
src/parse_raw_tokens/: parse_raw_tokens.c  t_substr_list.c
src/print/: print.c  print.h  print_numbers.c  print_pointer.c  print_text.c
src/print_tokens/: t_print_token.h
src/raw_tokens/: split_raw_tokens.c  split_raw_tokens.h  t_substr_list.c
src/substring/: t_substr.c  t_substr.h  t_substr_deque.c  t_substr_deque.h  t_substr_list.c  t_substr_list.h
src/t_deque/: t_deque.c  t_deque.h
src/t_lexeme_list/: t_lexeme_list.c
src/tokenize/: tokenize.c
src/tokens/: parse_token.c  t_tokens.h
test/: CMakeLists.txt  Makefile  fetch_gtest.cmake  main.c
test/src/: lexeme_list.c  lexeme_list.cpp  main.c  parse_lexemes.c  parse_lexemes.cpp  return_value.c  split_raw_tokens.cpp  substr_deque.cpp  test.cpp
